# cli-assistant

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: release.yml
config/: clad.service  com.cli-assistant.conf  config.toml
crates/cla-client/: Cargo.toml
crates/cla-client/src/: cli.rs  dbus_client.rs  main.rs  terminal.rs
crates/cla-client/src/rendering/: colors.rs  markdown.rs  mod.rs  renderer.rs  theme.rs
crates/cla-common/: Cargo.toml
crates/cla-common/src/: config.rs  constants.rs  environment.rs  errors.rs  files.rs  lib.rs  session.rs  system.rs
crates/cla-daemon/: Cargo.toml
crates/cla-daemon/src/: chat_interface.rs  dbus_server.rs  history_interface.rs  main.rs  user_interface.rs
crates/cla-daemon/src/database/: manager.rs  mod.rs  models.rs  repository.rs
crates/cla-daemon/src/history/: local.rs  manager.rs  mod.rs
crates/cla-daemon/src/http/: client.rs  mod.rs  query.rs
crates/cla-dbus/: Cargo.toml
crates/cla-dbus/src/: constants.rs  exceptions.rs  interfaces.rs  lib.rs  structures.rs
docs/: BUILD.md
scripts/: install.sh  uninstall.sh
