[package]
name = "cla-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clad"
path = "src/main.rs"

[dependencies]
cla-common = { path = "../cla-common" }
cla-dbus = { path = "../cla-dbus" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
zbus = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
